--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #ffcccc; /* розовый фон */
+    background-color: #ffcccc; 
     text-align: center;
 }
 
@@ -13,7 +13,7 @@ h1 {
 }
 
 button {
-    background-color: #4CAF50; /* зеленая кнопка */
+    background-color: #4CAF50; 
     color: white;
     padding: 15px 20px;
     border: none;
@@ -22,7 +22,7 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #6d0c49;
 }
 
 #catContainer {
